# test-mycurrency-backbase

./: .env.example  Makefile  README.md  pyproject.toml
currencies/: admin.py  apps.py  managers.py  models.py  scheduler.py  tasks.py
currencies/api/: __init__.py  serializers.py  urls.py  views.py
currencies/management/commands/: init_currencies.py  load_test_data.py
currencies/services/: __init__.py  exchange_rate.py  provider_manager.py
currencies/templates/admin/currencies/currency/: change_list.html  converter.html
mycurrency/: celery.py  settings.py  urls.py
mycurrency/mycurrency/: settings.py
