[project]
name = "backbase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
"Django>=5.2.8",
"django-filter>=25.2",
"django-environ>=0.12.0",
"djangorestframework>=3.16.1"
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ruff>=0.14.6",
]
