[project]
name = "backbase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "Django>=5.2.8",
    "django-filter>=25.2",
    "django-environ>=0.12.0",
    "djangorestframework>=3.16.1",
    "django-extensions>=4.1",
    "ipython>=9.7.0",
    "requests>=2.32.5",
    "pydantic>=2.12.4",
    "celery[redis]>=5.5.3",
    "flower>=2.0.1",
    "django-celery-beat>=2.7.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ruff>=0.14.6",
]
